[package]
name = "fitch-proof"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
